# Cellulars-for-Cell-Likes

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
docs/: lib.bib
external_input/: Bestes Repo für NCAs in PyTorch. Ich würde geren....md  Das ist nur ein kleines Projekt bei dem ich gerne....md  Gibt es eine cleane und sehr gute Bibliothek viel....md  Ok ich möchte es so einfach wie möglich halten, w....md  Super und wie kann ich dieselben metricen wie dor....md  Welche paper sind hierfür relevant_ Gibt es welch....md  die berechnen eine sensity und AUC, was ist das u....md
src/cfc/: __init__.py  main.py  test.py  train.py
src/cfc/model/: model_loading.py  neural_cellular_automata.py  utils.py
src/cfc/utils/: config.py  criterion.py  data.py  metrics.py  optimizer.py  scheduler.py  stepwise_train.py
